tests/sksl/errors/PrivateTypes.glsl
### Compilation failed:

error: 2: type '$mat' is private
error: 1: type 'InterfaceBlock' is private
error: 6: type '$bvec' is private
error: 9: type '$ivec' is private
error: 10: type '$genType' is private
5 errors
